[package]
name = "sockstest"
version = "0.1.0"
edition = "2021"
authors = ["sujiacong <linfengfeiye@qq.com>"]
description = "SOCKS proxy test tool"
readme = "README.md"
license = "MIT"
keywords = ["socks", "rust", "test"]
repository = "https://github.com/sujiacong/sockstest"

[dependencies]
libsocks_client = "0.1.1"
tokio = { version = "1.39.3", features = ["full"] }
clap = "4.3.4"
anyhow = "1.0.87"
colored = "2"

[profile.release]
strip = true
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
